Minor text updates to the deprecation text

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -78,12 +78,12 @@ under the License.
           <strong>
             Notice:
           </strong>
-          as of April 2020, our API documentation has been improved - the new version is available at
+          As of April 2021, our API documentation has been improved - the new version is available at
           <a href="https://family.binti.com/api-docs">https://family.binti.com/api-docs</a>.
         </p>
         <p>
           The content on this page is no longer being actively updated, so please
-          update your bookmarks and share the new link with your co-workers!
+          update your bookmarks and share the new link with your team!
         </p>
       </div>
     </section>
